# rapid_iphone_pipeline

./: .gitignore  convert_trajectory.py  node_iphone.py  pyproject.toml  record_server.py  requirements.txt  tcp_server.py
recordings/: trajectory_20260212_175638.csv  trajectory_20260212_175638.npy  trajectory_20260212_175638_robot.csv  trajectory_20260212_175638_robot.npy
