[project]
name = "rapid-iphone-pipeline"
version = "0.1.0"
description = "Convert ARKit trajectory to robot-executable 6D pose sequence"
requires-python = ">=3.10"
dependencies = [
    "python-socketio>=5.0",
    "eventlet>=0.33",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "zeroconf>=0.131",
    "opencv-python>=4.8",
    "pyzmq>=25.0",
    "msgpack>=1.0",
    "uvicorn>=0.24",
    "fastapi>=0.104",
]
